Fix z-index header, footer and top-bar

--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,7 @@ header {
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 2;
 }
 
 .header-container {
@@ -100,19 +101,23 @@ header {
 /* main */
 main {
     background-color: var(--main-bg);
-    width: calc(100vw - 225px);
+    /* width: calc(100% - 225px); */
     color: white;
     margin-left: 225px;
 }
 
 .main-container {
     padding: 15px 20px;
+    margin-top: 90px;
 }
 
 .main-top-bar {
     width: 100%;
     height: 90px;
     background-color: var(--top-bat-color);
+    position: fixed;
+    top: 0;
+    right: 0;
 }
 
 .nav-bar-top {
@@ -152,8 +157,8 @@ main {
 
 .box-song {
     text-align: center;
-    width: calc(100% / 6);
-    max-width: 180px;
+    width: calc((100% / 6) - 20px);
+    max-width: 150px;
     margin-top: 15px;
 }
 
@@ -179,24 +184,22 @@ footer {
     bottom: 0;
     left: 0;
     display: flex;
+    z-index: 3;
 }
 
 .footer-left {
     width: 25%;
     height: 100%;
-    border: 2px solid green;
 }
 
 .footer-main {
     width: 50%;
     height: 100%;
-    border: 2px solid white;
 }
 
 .footer-right {
     width: 25%;
     height: 100%;
-    border: 2px solid green;
 }
 
 /* !media query */
